css/styles.css
/* ... */
@media (max-height: 499px) {
  #home {
    background-position: center -450px;
  }
}

.tm-hero-text-container {
  width: 100%;
  height: 100%;
  display: flex;
  flex-flow: column;
  justify-content: center;
}

.tm-hero-text-container-inner {
  margin-top: -90px;
}

.tm-logo {
 padding: 10px;
 width: 250px;
 height: auto;
}

.tm-hero-title {
  font-family: "Dancing Script", cursive;
  font-size: 4rem;
  text-shadow: 2px 2px 2px #333;
  text-align: center;
}
@media (max-width: 768px) {
  .tm-hero-title {
    padding: -10px;
    font-size: 2rem; 
    opacity: 0%;
  }
}
.tm-hero-subtitle {
  position: relative;
  font-family: "Dancing Script", cursive;
  font-weight: bold;
  font-size: 2rem;
  color:   rgb(43, 45, 131);
  text-shadow: 3px 3px 3px #ffffff;
  text-align: center;
  padding: 30px;
  margin: 0 auto; 
  max-width: 1500px; 
  text-align: center;
  z-index: 2;
  letter-spacing: 3px;
}

@media (max-width: 768px) {
  .tm-hero-subtitle {
    margin-top: 50px;
    padding: -20px;
    font-size: 2.2rem;
    line-height: 1.1;
    text-align: center;
  }
}



.tm-intro-next {
  position: absolute;
  bottom: 100px;
  left: 0;
  right: 0;
}

@media (max-height: 480px) {
  .tm-hero-text-container-inner {
    margin-top: -40px;
  }

  .tm-intro-next {
    bottom: 20px;
  }
}

/* Arrow */
.tm-down-arrow-link {
  display: block;
  margin-top: 18%;
}

.tm-down-arrow {
  	color: #FFF;
    cursor: pointer;
    background: rgba(31, 180, 206, 0.37);
    padding: 15px 40px;
    transition: all 0.3s ease;
}

.tm-down-arrow:hover,
.tm-down-arrow:focus {
  color: #FFF;
  background: rgba(31, 63, 206, 0.801);
  padding: 20px 50px;
}

@media screen and (max-width: 767px) {

  .tm-down-arrow-link {
    position: absolute;
    bottom: -80px; /* Ajustez cette valeur selon vos besoins */
    left: 50%;
    transform: translateX(-50%);
  }
}


/* Introduction */

#introduction {
  padding-bottom: 100px;
}

.tm-section-title {
  font-family: "Dancing Script", cursive;
  color: #06427a8f;
  font-size: 2.6rem;
  font-weight: normal;
}
.tm-soussection-title {
  font-size: 1.4rem;
  font-weight: normal;
}

.tm-intro-text {
  font-size: 1.2rem;
  text-align: justify;
  color: #000000;
}

.tm-icon {
  display: block;
  color: #38B;
}

.tm-continue {
	padding: 20px 0 30px 0;
}

/* forwhat */
#forwhat {
  color: rgb(255, 255, 255);
  background-image: url(../img/forwhat-background.jpeg);
  background-color: rgb(0, 0, 0);
  background-size: cover;
  background-repeat: no-repeat;
  background-size: 100%;
  position: relative;
}
#forwhat::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(8, 8, 8, 0.096);
}
.tm-forwhat-content {
  position: relative;
  z-index: 100;
}

.tm-bg-overlay {
  width: 100%;
  height: 100%;
  background: rgba(20, 70, 80, 0.2);
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 0;
}

.tm-forwhat-carousel {
  margin: 0 auto; 
    display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}

.tm-forwhat-item {
  max-width: 290px;
  margin-left: 10px;
  margin-right: 10px;
}

.tm-forwhat-item img {
  border-radius: 50%;
  width: 300px; 
  height: 300px; 
  margin-bottom: 35px;
}

.tm-forwhat-item figcaption {
  text-align: right;
  font-style: italic;
  font-weight: bold;
  font-size: 1.1rem;
}

.tm-forwhat-carousel .slick-dots li button:before {
  color: white;
  opacity: 0.5;
}

.tm-forwhat-carousel .slick-dots li button:hover:before,
.tm-forwhat-carousel .slick-dots li button:focus:before,
.tm-forwhat-carousel .slick-dots li.slick-active button:before {
  color: white;
  opacity: 1;
}
.slick-dots {
  bottom: -65px;
}

.slick-dots li {
  margin: 0 13px;
}

.slick-dots li button:hover:before,
.slick-dots li button:focus:before,
.slick-dots li.slick-active button:before {
  opacity: 1;
  color: #38B;
}


.slick-dots li button:before {
  font-size: 18px;
}

/* Pour les écrans jusqu'à 767px de large (téléphones et tablettes) */
@media screen and (max-width: 767px) {
  .tm-forwhat-item {
    flex: 0 0 auto;
    margin-left: 25px;
    margin-right: 29px;
  }

  /* Rétablir l'affichage des dots sur les écrans mobiles */
  .slick-dots {
    display: block !important;
  }
}

/* Pour les écrans de 768px de large (ordinateurs) et plus grands */
@media screen and (min-width: 768px) {
  /* Masquer les dots sur les écrans plus larges */
  .slick-dots {
    display: none !important;
  }
}


/* Work */
.tm-section-desc1 {
  color: rgb(255, 255, 255);
  text-shadow: 2 2px 2 rgba(0, 0, 0, 0.5);
  max-width: 400;
  width: 100%;
  font-size: 1rem;
  text-align: justify;
}
.tm-section-desc {
  text-shadow: 2 2px 2 rgba(0, 0, 0, 0.5);
  max-width: 400;
  width: 100%;
  font-size: 1.1rem;
  text-align: justify;
  color: #000000;
}

.tm-gallery-container {
  padding-top: 70px;
  padding-bottom: 120px;
  max-width: 1320px;
}

.tm-gallery-item {
  max-width: calc(16.666% - 20px);
  margin: 0 15px;
}


/* Hover Effect */
/* Common style */
.grid figure {
  position: relative;
  float: left;
  overflow: hidden;
  background: #38B;
  text-align: center;
  cursor: pointer;
}

.grid figure img {
  position: relative;
  display: block;
  min-height: 100%;
  max-width: 100%;
  opacity: 0.8;
}

.grid figure figcaption {
  padding: 2em;
  color: #fff;
  text-transform: uppercase;
  font-size: 1.25em;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
}

.grid figure figcaption::before,
.grid figure figcaption::after {
  pointer-events: none;
}

.grid figure figcaption,
.grid figure figcaption > a {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

/* Anchor will cover the whole item by default */
/* For some effects it will show as a button */
.grid figure figcaption > a {
  z-index: 1000;
  text-indent: 200%;
  white-space: nowrap;
  font-size: 0;
  opacity: 0;
}

.grid figure h2 {
  word-spacing: -0.15em;
  font-size: 0.9em;
  font-weight: 300;
}
/* ... */

